2009-02-20  Rodney Dawes  <dobey@gnome.org>

	* legacy-icon-mapping.xml:
	Remove the stock_mail-priority-high symlink

	Fixes https://bugs.launchpad.net/ubuntu/+bug/319991

2008-06-14  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.ac:
	Up version to 0.8.7 for release

2008-06-12  Rodney Dawes  <dobey.pwns@gmail.com>

	* legacy-icon-mapping.xml:
	Add gnome-shutdown link for system-shutdown
	Add inode-directory link for folder

2008-01-09  Rodney Dawes  <dobey.pwns@gmail.com>

	* legacy-icon-mapping.xml:
	Add gnome-mime-application-x-lzma and
	gnome-mime-application-x-lzma-compressed-tar as links for
	package-x-generic

2007-08-27  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.ac: Up version to 0.8.6 for release

2007-08-27  Rodney Dawes  <dobey.pwns@gmail.com>

	* legacy-icon-mapping.xml:
	Add applications-other link to gnome-other
	Add phone link to stock_cell-phone

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=12155
	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=12156

2007-08-26  Rodney Dawes  <dobey.pwns@gmail.com>

	* README: Update with example of usage

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.ac: Up version to 0.8.5 for release

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* Makefile.am: Handle the uninstalled pc file separate from the
	normal pc file so we don't install it

	See http://bugs.freedesktop.org/show_bug.cgi?id=10222

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.ac: Up version to 0.8.4 for release

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* legacy-icon-mapping.xml: Fix mail status icons to be status and not
	link to the action counterparts

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=11468

2007-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* legacy-icon-mapping.xml: Add mail-attachment link

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=11467

2007-08-16  Rodney Dawes  <dobey.pwns@gmail.com>
